--- a/municipio.html
+++ b/municipio.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Municipio de Barrancabermeja</title>
+    <title>Municipio de Barrancabermej</title>
     <style>
         body {
             font-family: Cambria;
